--- a/index.html
+++ b/index.html
@@ -17,31 +17,29 @@
     <title>Frontend Mentor | Product preview card component</title>
   </head>
   <body>
-    <main class="main">
-      <div class="container">
-        <div class="image-container">
-          <img
-            class="product-image"
-            src="images/image-product-desktop.jpg"
-            alt="Gabrielle Perfume"
-          />
+    <main class="container">
+      <div class="image-container">
+        <img
+          class="product-image"
+          src="images/image-product-desktop.jpg"
+          alt="Gabrielle Perfume"
+        />
+      </div>
+      <div class="product-details">
+        <p class="label">Perfume</p>
+        <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
+        <p class="description">
+          A floral, solar and voluptuous interpretation composed by Olivier
+          Polge, Perfumer-Creator for the House of CHANEL.
+        </p>
+        <div class="prices">
+          <p class="new-price">$149.99</p>
+          <p class="old-price">$169.99</p>
         </div>
-        <div class="product-details">
-          <p class="label">Perfume</p>
-          <h1 class="title">Gabrielle Essence Eau De Parfum</h1>
-          <p class="description">
-            A floral, solar and voluptuous interpretation composed by Olivier
-            Polge, Perfumer-Creator for the House of CHANEL.
-          </p>
-          <div class="prices">
-            <p class="new-price">$149.99</p>
-            <p class="old-price">$169.99</p>
-          </div>
-          <button class="btn">
-            <img class="icon" src="images/icon-cart.svg" alt="Cart" />
-            <span class="btn-text">Add to Cart</span>
-          </button>
-        </div>
+        <button class="btn">
+          <img class="icon" src="images/icon-cart.svg" alt="Cart" />
+          <span class="btn-text">Add to Cart</span>
+        </button>
       </div>
     </main>
   </body>
